add addUser api

--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -1,14 +1,17 @@
-version: '3.9'
-
-## NOTE: use the script 'start-docker-compose' to run this 
-
+version: '3'
 services:
-
   mariadb-server:
-    image: mariadb:10.6.13
+    image: mysql:latest
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
       MYSQL_ROOT_PASSWORD: abcXYZ123$
+      MYSQL_ROOT_HOST: '%'
+      MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
+      MYSQL_DATABASE: keycloak
+      MYSQL_USER: keycloak_user
+      MYSQL_PASSWORD: xyz123ABC
+      MYSQL_INITDB_SKIP_TZINFO: '1'
+      MYSQL_SSL_MODE: 'DISABLED'
     volumes:
       - ./sql:/docker-entrypoint-initdb.d
       - mariadb-server-vol:/var/lib/mysql
@@ -16,7 +19,7 @@ services:
       - demo-network
 
   phpMyAdmin:
-    image: phpmyadmin/phpmyadmin:5.2.1
+    image: phpmyadmin/phpmyadmin:latest
     depends_on:
       - mariadb-server
     environment:
@@ -36,23 +39,20 @@ services:
     networks:
       - demo-network
 
-
   keycloak:
-    image: quay.io/keycloak/keycloak:22.0.1    
+    image: jboss/keycloak  
     ports:
-      - 8181:8080
-    command: -v start-dev --import-realm
+      - "8080:8080"
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin123
-      KC_DB: mariadb
-      KC_DB_URL_HOST: mariadb-server
-      KC_DB_URL_DATABASE: keycloak
-      KC_DB_URL_PORT: 3306
-      KC_DB_USERNAME: keycloak_user
-      KC_DB_PASSWORD: xyz123ABC$
-    volumes:
-      - ./keycloak:/opt/keycloak/data/import
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: admin
+      DB_VENDOR: MYSQL
+      DB_ADDR: mariadb-server
+      DB_DATABASE: keycloak
+      DB_USER: keycloak_user
+      DB_PASSWORD: xyz123ABC
+    depends_on:
+      - mariadb-server
     networks:
       - demo-network
 
